# smp-agents

./: .env.example  .gitignore  Dockerfile.bundle-validator  Dockerfile.kg-qa  Dockerfile.payment-ops  Dockerfile.playground  Dockerfile.skill-advisor  Dockerfile.skill-builder  README.md  config.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  e2e.yml
agents/bundle_validator/: Dockerfile  agent.py  server.py
agents/bundle_validator/evals/: full_audit.test.json  lifecycle_check.test.json  missing_skill.test.json  similarity_check.test.json  test_config.json  validate_bundle.test.json
agents/kg_qa/: Dockerfile  agent.py  server.py
agents/kg_qa/evals/: complex_cypher.test.json  count_skills.test.json  dependency_chain.test.json  hybrid_search.test.json  skill_lookup.test.json  test_config.json
agents/payment_ops/: Dockerfile  agent.py  server.py
agents/payment_ops/evals/: detect_duplicate.test.json  diagnose_missing_bic.test.json  sanctions_triage.test.json
agents/playground/: Dockerfile  agent.py  server.py
agents/playground/evals/: catalog_fetch.test.json  no_skill_selected.test.json  skill_embodiment.test.json  switch_skill.test.json  test_config.json
agents/skill_advisor/: Dockerfile  agent.py  server.py
agents/skill_advisor/evals/: catalog_search.test.json  explore_alternatives.test.json  graph_query.test.json  no_results.test.json  recommend_skills.test.json  test_config.json
agents/skill_builder/: Dockerfile  agent.py  server.py
agents/skill_builder/evals/: create_and_publish.test.json  create_skill.test.json  invalid_skill.test.json  publish_and_sync.test.json  (+1 more)
k8s/argocd/: application.yaml
k8s/base/: authbridge.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  secret.yaml
scripts/: bootstrap_embeddings.py  build_knowledge_graph.py  deploy_kagenti.sh  enrich_graph.py  export_skills_to_catalog.py  import_ms_skills.py  run_skill_evals.py  sync_catalog_to_neo4j.py  sync_oci_skills.py  validate_graph.py
shared/: __init__.py  catalog_tools.py  eval_metrics.py  health.py  model_config.py  neo4j_tools.py  oci_tools.py  payment_tools.py  semantic_search_tools.py  skill_eval_runner.py
tests/: conftest.py  test_agent_construction.py  test_agent_evals.py  test_catalog_tools.py  test_e2e_agent_cards.py  test_e2e_agents.py  test_e2e_health.py  test_health.py  test_integration_agents.py  test_integration_embedding.py  test_integration_neo4j.py  test_model_config.py  test_neo4j_tools.py  test_oci_tools.py  test_payment_ops.py  test_pipeline_hardening.py  test_semantic_search.py  test_skill_evals.py
(+41 files in other folders)
